feat: 목록 조회시 DTO를 통해 규격을 통일화한다.